--- a/force-app/main/default/classes/StudyDetailViewController.cls
+++ b/force-app/main/default/classes/StudyDetailViewController.cls
@@ -3,11 +3,17 @@
  */
 public without sharing class StudyDetailViewController {
 
+
     @AuraEnabled
-    public static String getTrialDetail(String trialId, String userMode) {
+    public static String getTrialDetail(String trialId, String userMode){
+        return getTrialDetail(trialId, userMode, null);
+    }
+
+    @AuraEnabled
+    public static String getTrialDetail(String trialId, String userMode, String delegateId) {
         try {
             System.debug('getTrialDetail');
-            TrialDetail td = TrialFactory.getTrial(userMode, trialId);
+            TrialDetail td = TrialFactory.getTrial(userMode, trialId, delegateId);
             return JSON.serialize(td);
 
         } catch (Exception e) {
