--- a/force-app/main/default/classes/CommunityFacadeRemote.cls
+++ b/force-app/main/default/classes/CommunityFacadeRemote.cls
@@ -57,8 +57,8 @@ public without sharing class CommunityFacadeRemote {
                 cd.communityTypes.add( new CommunityType(CommunityService.USER_MODE_HCP,Label.CTL_L_HCP_MODE,''));
             }
             for(RP_Delegate_Relationship__c delegate : DelegateService.getHCPDelegates()){
-                availableModes.add(CommunityService.USER_MODE_HCP + ';' + delegate.Id);
-                cd.communityTypes.add( new CommunityType(CommunityService.USER_MODE_HCP,Label.CTL_L_HCP_DELEGATE_MODE.replaceAll('##RPName',delegate.Referring_Provider__r.Full_Name__c),delegate.Id));
+                availableModes.add(CommunityService.USER_MODE_HCP + ';' + delegate.Referring_Provider__c);
+                cd.communityTypes.add( new CommunityType(CommunityService.USER_MODE_HCP,Label.CTL_L_HCP_DELEGATE_MODE.replaceAll('##RPName',delegate.Referring_Provider__r.Full_Name__c),delegate.Referring_Provider__c));
             }
             if(StudySiteService.getStudySitesForPI().size() > 0){
                 availableModes.add(CommunityService.USER_MODE_PI);
